namespace SocialCare.Application.DTOs.Publico;

public record EstadoDto(int Id, int CodigoIbge, string Sigla, string Nome, string Regiao);
